# alex

./: .env.example  .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-19-chunk-first-claim-graph.md
docs/superpowers/specs/: 2026-06-19-chunk-first-claim-graph-design.md
evals/corpus/: cognitive_load_theory_chad_clark_and_royce_kimmons.md  how_to_take_smart_notes_sönke_ahrens.md  tell_me_what_i_need_to_know_exploring_llmbased_personalized_abstractive_multisource_meeting_summarization_frederic_kirstein_terry_ruas_robert_kratel_b.md
evals/facts/: 46f670855447.anthropic-claude-sonnet-4-6.v001.json  82dbbbbbd80a.anthropic-claude-sonnet-4-6.v001.json  da348ff1d32b.anthropic-claude-sonnet-4-6.v001.json
evals/lineage/: chunk_summary.jsonl
src/alex/: __init__.py
src/alex/commands/: __init__.py  dump_env.py  (+15 more)
tests/: helpers.py  test_asset_folders.py  test_chunking.py  test_claim_graph.py  test_cli.py  test_dump_env_command.py  test_env.py  test_eval_claim_graph_command.py  test_eval_judges_command.py  test_eval_merged_summary_command.py  test_eval_report.py  test_eval_summary_command.py  test_improve_prompt_command.py  test_llm.py  test_locking.py  test_pdf_markdown_samples.py  test_process_doc_assets.py  test_process_doc_command.py  test_process_vault.py  test_process_vault_command.py  test_prompt_improvement.py  test_prompt_templates.py  test_skills_command.py  test_summary_assets.py  test_summary_command.py  test_summary_eval.py  test_to_asset_command.py  test_to_markdown_converter.py  test_transcribe_command.py  test_transcription.py
(+62 files in other folders)
