[project]
name = "alex"
version = "0.1.0"
description = "Command line tools for alex."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.0",
    "marker-pdf>=1.10.2",
    "pydantic>=2.13.4",
    "pymupdf4llm>=1.27.2.3",
]

[project.scripts]
alex = "alex.commands.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
